Fix navigation width alignment by removing header container padding

--- a/css/styles.css
+++ b/css/styles.css
@@ -176,6 +176,7 @@ section {
 
 .header .container {
     width: 90%;
+    padding: 0;
 }
 
 .logo {
